<resources>
    <string name="app_name">NeoTourism</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_moreinfo">Más Información</string>
    <string name="text_lapola">La Pola</string>
    <string name="text_bolivar">Templete Bolívar</string>
    <string name="text_img">Image</string>
    <string name="text_desc">No hay una descripción disponible. Intentalo más tarde.</string>
    <string name="text_titulo">Sin título</string>
    <string name="desc_lapola">En Bogotá, en la Plazuela de Las Aguas (carrera 3a con calle 18), se encuentra una escultura de Policarpa Salavarrieta realizada por Dionisio Cortés. Fue instalada en 1910 con motivo del primer centenario de la Independencia. A partir de esta pieza, y de su proceso de selección, encargo y realización, es posible vislumbrar la situación de la escultura colombiana a fines del siglo XIX y principios del XX, sobre todo en lo que se refiere a los encargos para obras en espacio público.</string>
    <string name="desc_bolivar">El 20 de julio de 1883, en honor al natalicio del libertador, se inauguró el Parque Centenario con este Templete diseñado por el arquitecto italiano Pietro Cantini. Con el pasar de los años el Parque Centenario desapareció debido a la transformación de la carrerra 10 realizada en los años 40. Por esta razón el Templete se trasladó a un separador de la Calle 26 con Carrera 7. Luego, en 1958, fue ubicado en el Parque de los Periodistas Gabriel García Márquez, en la carrera 3 con avenida Jiménez, sobre el Eje Ambiental, donde actualmente reposa.</string>
    <string name="title_activity_places_list">PlacesList</string>
    <string name="tab_text_1">Cerca a ti</string>
    <string name="tab_text_2">Recomendados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cerca_a_ti">Cerca a ti</string>
    <string name="recomendados">Te recomendamos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_otrosLugares">Otros lugares</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_miCuenta">Mi cuenta</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_view_content_description">Game view</string>
    <string name="descripcion">Descripción</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentario_nodisp">Comentario no disponible.</string>
    <string name="nombre_fill">Nombre</string>
    <string name="idioma">Idioma</string>
    <string name="preferencias">Preferencias</string>
    <string name="interes">Interés</string>
    <string name="tusintereses">Tus Intereses</string>
    
    <string-array name="idiomas_array">
        <item>Español</item>
    </string-array>
  
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="arg_show_place">com.neotourism.SHOWPLACE</string>
</resources>
