<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mi_cuenta_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MiCuenta"
    android:layout_centerVertical="true">

    <ImageView
        android:id="@+id/imageSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoblancorosa" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"


        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="none"
        android:fadingEdge="vertical"
        android:hint="Name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSignUp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"


        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="none"
        android:fadingEdge="vertical"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/purple"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="Cerrar sesión"
        android:textColor="@color/purple"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_below="@+id/btnIniciar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/registrarse_background"
        android:text="Guardar cambios"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>